<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.elad</groupId>
    <artifactId>myapp</artifactId>
    <version>1.0.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <spring.boot.ver>1.4.2.RELEASE</spring.boot.ver>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.4.2.RELEASE</version>
    </parent>


    <modules>
        <module>facade</module>
        <module>application</module>
        <module>model</module>
        <module>dal</module>
    </modules>


    <!--<dependencyManagement>-->
    <!--<dependencies>-->
    <!--<dependency>-->
    <!--<groupId>org.springframework.boot</groupId>-->
    <!--<artifactId>spring-boot-starter-web</artifactId>-->
    <!--</dependency>-->
    <!--</dependencies>-->
    <!--</dependencyManagement>-->


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <inherited>true</inherited>
                <configuration>
                    <argLine>-XX:-UseSplitVerifier -Xms512m -Xmx512m -XX:MaxPermSize=512m</argLine>
                </configuration>
            </plugin>
            <!--<plugin>-->
            <!--<groupId>org.springframework.boot</groupId>-->
            <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
            <!--<configuration>-->
            <!--<addResources>true</addResources>-->
            <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>
</project>
